# RelayRL-prototype

./: CONTRIBUTING.md  README.md
.github/workflows/: publish-crates  publish-pypi.yml
examples/: README.md  requirements.txt
examples/PPO/box2d/lunar_lander/: lunar_lander_zmq.ipynb
examples/PPO/box2d/lunar_lander/zmq/: lunar_lander_zmq.ipynb
examples/PPO/classic_control/cartpole/: cartpole_grpc.ipynb
examples/PPO/classic_control/cartpole/zmq/: cartpole_zmq.ipynb
examples/PPO/classic_control/mountain_car/: mountain_car_grpc.ipynb
examples/PPO/classic_control/mountain_car/zmq/: mountain_car_zmq.ipynb
examples/REINFORCE/box2d/lunar_lander/: lunar_lander_grpc.ipynb
examples/REINFORCE/box2d/lunar_lander/grpc/: client_model.pt  relayrl_config.json
examples/REINFORCE/box2d/lunar_lander/grpc/logs/relayrl-reinforce-info/relayrl-reinforce-info_s240240001/: config.json
examples/REINFORCE/box2d/lunar_lander/grpc/logs/relayrl-reinforce-info/relayrl-reinforce-info_s255440001/: config.json
examples/REINFORCE/box2d/lunar_lander/grpc/logs/relayrl-reinforce-info/relayrl-reinforce-info_s256470001/: config.json
examples/REINFORCE/box2d/lunar_lander/grpc/logs/relayrl-reinforce-info/relayrl-reinforce-info_s264510001/: config.json  progress.txt
examples/REINFORCE/box2d/lunar_lander/zmq/: client_model.pt
examples/REINFORCE/box2d/lunar_lander/zmq/logs/relayrl-reinforce-info/relayrl-reinforce-info_s276240001/: config.json  progress.txt
examples/REINFORCE/box2d/lunar_lander/zmq/logs/relayrl-reinforce-info/relayrl-reinforce-info_s276810001/: config.json  progress.txt
examples/REINFORCE/box2d/lunar_lander/zmq/logs/relayrl-reinforce-info/relayrl-reinforce-info_s278830001/: config.json  progress.txt
examples/REINFORCE/box2d/lunar_lander/zmq/logs/relayrl-reinforce-info/relayrl-reinforce-info_s279670001/: config.json  progress.txt
examples/REINFORCE/box2d/lunar_lander/zmq/logs/relayrl-reinforce-info/relayrl-reinforce-info_s743450001/: config.json  progress.txt
examples/REINFORCE/classic_control/cartpole/grpc/logs/relayrl-reinforce-info/relayrl-reinforce-info_s267410001/: config.json
examples/REINFORCE/classic_control/cartpole/grpc/logs/relayrl-reinforce-info/relayrl-reinforce-info_s268300001/: config.json
examples/REINFORCE/classic_control/mountain_car/grpc/: relayrl_config.json
examples/REINFORCE/classic_control/mountain_car/zmq/: mountain_car_zmq.ipynb
examples/REINFORCE_with_baseline/box2d/lunar_lander/grpc/: server_model.pt
examples/REINFORCE_with_baseline/box2d/lunar_lander/zmq/: client_model.pt  server_model.pt
examples/REINFORCE_with_baseline/classic_control/cartpole/grpc/: cartpole_grpc.ipynb
examples/REINFORCE_with_baseline/classic_control/cartpole/zmq/: cartpole_zmq.ipynb  client_model.pt
examples/REINFORCE_with_baseline/classic_control/mountain_car/grpc/: client_model.pt  mountain_car_grpc.ipynb  server_model.pt
examples/REINFORCE_without_baseline/box2d/lunar_lander/grpc/: client_model.pt  lunar_lander_grpc.ipynb  relayrl_config.json  server_model.pt
examples/REINFORCE_without_baseline/box2d/lunar_lander/zmq/: lunar_lander_zmq.ipynb
examples/REINFORCE_without_baseline/classic_control/cartpole/grpc/: relayrl_config.json
examples/REINFORCE_without_baseline/classic_control/mountain_car/zmq/: client_model.pt  server_model.pt
relayrl_framework/: Cargo.toml  README.md  build.rs
relayrl_framework/benches/: network_benchmarks.rs  o3_network_benchmarks.rs  runtime_benchmarks.rs
relayrl_framework/proto/: relayrl_grpc.proto
relayrl_framework/scripts/development/: bench-release.sh  cargo-release-profile.sh  maturin-release-profile.sh  maturin-release.sh
relayrl_framework/scripts/distribution/: maturin-build-release.sh
relayrl_framework/src/: default_config.json  lib.rs
relayrl_framework/src/bindings/python/: o3_action.rs  o3_config_loader.rs  o3_trajectory.rs
relayrl_framework/src/bindings/python/network/client/: o3_agent.rs
relayrl_framework/src/bindings/python/network/server/: o3_training_server.rs
relayrl_framework/src/native/python/: python_algorithm_reply.py  requirements  training_tensorboard.py
relayrl_framework/src/native/python/_common/_algorithms/: BaseAlgorithm.py  BaseKernel.py  BaseReplayBuffer.py
relayrl_framework/src/native/python/_common/_examples/: BaseApplication.py
relayrl_framework/src/native/python/algorithms/PPO/: PPO.py  kernel.py  replay_buffer.py
relayrl_framework/src/native/python/algorithms/REINFORCE/: REINFORCE.py  kernel.py  replay_buffer.py
relayrl_framework/src/native/python/utils/: logger.py  plot.py
relayrl_framework/src/network/: mod.rs
relayrl_framework/src/network/client/: agent_grpc.rs  agent_wrapper.rs  agent_zmq.rs
relayrl_framework/src/network/server/: training_grpc.rs  training_server_wrapper.rs  training_zmq.rs
relayrl_framework/src/network/server/python_subprocesses/: python_algorithm_request.rs  python_training_tensorboard.rs
relayrl_framework/src/orchestration/tokio/: utils.rs
relayrl_framework/src/orchestration/tonic/: grpc_utils.rs
relayrl_framework/src/sys_utils/: config_loader.rs  misc_utils.rs  resolve_server_config.rs
relayrl_framework/src/types/: action.rs  trajectory.rs
(+8 files in other folders)
